<resources>
	<string name="app_name">Xkcd</string>
	<string name="next_button_description">Next</string>
	<string name="end_button_description">End</string>
	<string name="previous_button_description">Previous</string>
	<string name="start_button_description">Start</string>
	<string name="search">Search</string>
	<string name="explain">Explain</string>
	<string name="detail">Detail</string>
	<string name="back">back</string>
    <string name="search_hint">Search by number or text</string>
	<string name="comic_detail">Comic Detail</string>
	<string name="comic_explanation">Comic Explanation</string>
	<string name="title_label">Title:</string>
	<string name="date_label">Date:</string>
	<string name="number_label">Number:</string>
	<string name="transcript_label">Transcript:</string>
	<string name="date_template">%1$s/%2$s/%3$s</string>
	<string name="share">Share</string>
</resources>
