<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="viewModel"
			type="my.test.xkcd.viewmodel.DetailViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.activities.HomeActivity">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/tool_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/colorPrimary"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/back"
				android:onClick="@{viewModel.onClickBack()}"
				android:padding="@dimen/margin_small"
				android:src="@drawable/ic_back_arrow" />

			<TextView
				android:id="@+id/tv_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingStart="@dimen/margin_normal"
				android:paddingEnd="@dimen/margin_normal"
				android:text="@string/comic_explanation"
				android:textColor="@android:color/black" />

		</androidx.appcompat.widget.Toolbar>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/cl_content"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tool_bar"
			app:layout_constraintVertical_bias="0.0">

			<TextView
				android:id="@+id/tv_comic_title_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/title_label"
				android:textColor="@color/black"
				android:textSize="@dimen/normal_high"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/tv_comic_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:textColor="@color/black"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toEndOf="@+id/tv_comic_title_label"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/tv_date_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/date_label"
				android:textColor="@color/black"
				android:textSize="@dimen/normal_high"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_comic_title" />

			<TextView
				android:id="@+id/tv_date"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:textColor="@color/black"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/tv_date_label"
				app:layout_constraintTop_toBottomOf="@+id/tv_comic_title" />

			<TextView
				android:id="@+id/tv_transcript_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/transcript_label"
				android:textColor="@color/black"
				android:textSize="@dimen/normal_high"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_date" />

			<TextView
				android:id="@+id/tv_transcript"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:textColor="@color/black"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/tv_transcript_label"
				app:layout_constraintTop_toBottomOf="@+id/tv_date" />

		</androidx.constraintlayout.widget.ConstraintLayout>


	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
